artifacts/zot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: zot
spec:
  selector:
    app.kubernetes.io/name: zot
  ports:
    - name: http
      port: 5000
      targetPort: http
