artifacts/zot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  namespace: zot
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "registry.dataverket.org"
  rules:
    - backendRefs:
        - name: zot
          port: 5000
      # Zero disables the request timeout; blob uploads are long requests.
      timeouts:
        request: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-redirect
  namespace: zot
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: http
  hostnames:
    - "registry.dataverket.org"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
